<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="desc_firebase_lockup">Sign In Firebase</string>
    <string name="emailpassword_title_text">Autentication with Firebase</string>
    <string name="hint_email">Type your email</string>
    <string name="hint_password">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Put</string>
    <string name="verify_email" />
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome">Welcome your App!!</string>
</resources>
